# ezpyai

./: .gitignore  .pylintrc  Makefile  README.md  pre-commit.sh  pyproject.toml
.github/workflows/: pipeline.yml
src/ezpyai/: _constants.py  _logger.py  exceptions.py
src/ezpyai/constants/: __init__.py  _chat_ids.py  _chat_roles.py  _dict_keys.py  _env_vars.py  _http_content_types.py  _http_headers.py  _http_methods.py  _names.py
src/ezpyai/dataset/chat/: __init__.py  chat.py  dataset_chat.py
src/ezpyai/dataset/chat/sources/: __init__.py  _dataset_source.py  telegram.py
src/ezpyai/dataset/instruct/: __init__.py
src/ezpyai/exceptions/: __init__.py  _general.py  _llm.py  _llm_provider.py
src/ezpyai/llm/: _llm.py  conversation.py  exceptions.py  knowledge.py  llm.py  openai.py  prompt.py
src/ezpyai/llm/dataset/: chat.py
src/ezpyai/llm/dataset/chat/: __init__.py  dataset_chat.py
src/ezpyai/llm/dataset/chat/sources/: __init__.py  _dataset_source.py  telegram.py
src/ezpyai/llm/dataset/instruct/: __init__.py  instruct.py
src/ezpyai/llm/dataset/sources/: telegram.py
src/ezpyai/llm/knowledge/: _knowledge.py  _knowledge_db.py  _knowledge_gatherer.py  chroma_db.py  chromadb.py  exceptions.py  knowledge_item.py
src/ezpyai/llm/providers/: _llm_provider.py  exceptions.py  openai.py  text_generation_web_ui.py
src/ezpyai/llm/providers/_http_clients/: text_generation_web_ui.py
