[build-system]
requires = ["hatchling==1.24.2"]
build-backend = "hatchling.build"

[project]
name = "ezpyai"
version = "0.0.1a8"
authors = [{ name = "Ciprian Mandache", email = "psyb0t@51k.eu" }]
description = "A useful utility library for AI applications"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai==1.35.13",
    "chromadb==0.5.4",
    "pypdf>=3.9.0",
    "python-docx==1.1.2",
    "python-magic==0.4.27",
    "pandas==2.2.2",
    "beautifulsoup4==4.12.3 ",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/psyb0t/ezpyai"
Issues = "https://github.com/psyb0t/ezpyai/issues"
